objects/Agenda_Room__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Briefing_Status__c</fullName>
        <label>Briefing Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Briefing_Type__c</fullName>
        <label>Briefing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Engagements_Events__c</fullName>
        <label>Customer Engagements &amp; Events</label>
        <referenceTo>CEE__c</referenceTo>
        <relationshipLabel>Rooms</relationshipLabel>
        <relationshipName>Agenda_Rooms</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <defaultValue>NULL</defaultValue>
        <label>End Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Engagement_Contact_Email__c</fullName>
        <description>Engagement Contact</description>
        <formula>Customer_Engagements_Events__r.Engagement_Contact_Email__c</formula>
        <label>Engagement Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Contact_Name__c</fullName>
        <description>Engagement Contact Name</description>
        <formula>Customer_Engagements_Events__r.Engagement_Contact_Name__c</formula>
        <label>Engagement Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <description>Customer_Engagements_Events__r.Event_Name__c</description>
        <formula>""</formula>
        <label>zzEvent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_Name_Dataloder__c</fullName>
        <formula>Room__r.Display_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Room Name Dataloder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_Name__c</fullName>
        <label>Room Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <label>Room</label>
        <referenceTo>CEE_Room__c</referenceTo>
        <relationshipLabel>Agenda Rooms</relationshipLabel>
        <relationshipName>Agenda_Rooms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <defaultValue>Null</defaultValue>
        <label>Start Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Agenda Room</label>
    <nameField>
        <displayFormat>RM-{00000}</displayFormat>
        <label>Room Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agenda Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Start_Date_Greater_than_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date_Time__c &gt;= End_Date_Time__c</errorConditionFormula>
        <errorDisplayField>Account_Name__c</errorDisplayField>
        <errorMessage>The Start Date/Time needs to be earlier than the End Date/Time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_or_End_within_Briefing_Window</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Start_Date_Time__c &lt; Customer_Engagements_Events__r.Start_Date_Time__c, Start_Date_Time__c &gt;= Customer_Engagements_Events__r.End_Date_Time__c, End_Date_Time__c &lt;= Customer_Engagements_Events__r.Start_Date_Time__c, End_Date_Time__c &gt; Customer_Engagements_Events__r.End_Date_Time__c)</errorConditionFormula>
        <errorDisplayField>Account_Name__c</errorDisplayField>
        <errorMessage>The Room times chosen are outside the Briefing's Start or End Time.</errorMessage>
    </validationRules>
</CustomObject>